2006-01-15  Karl Berry  <karl@gnu.org>

	* po/POTFILES.in: add missing makeinfo/xref.c, makeinfo/float.c.
	Report from Torsten.

2006-01-09  Akim Demaille  <akim@epita.fr>

	* util/texi2dvi: set -e.
	Stop using the idiom "test && action" in favor of "if test; then
	action; fi".
	(xref_files_save): Use tar instead of cp.
	(run_makeinfo): Fix a "local" use.

2006-01-08  Loic Minier  <lool@dooz.org>  (tiny change)

	* info/display.c (display_update_one_window): systematize
	check as to whether `entry' is non-null before referring to it.
	Still some segfaults when resizing the window rapidly.

2006-01-08  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\normalturnoffactive): restore setting of
	active \ to \normalbackslash.
	(\onepageout): restore call to \normalturnoffactive.
	Otherwise, if a page break happens at the wrong time, the active
	\ will result in writing an actual \ character,
	instead of {\tt \backslashcurfont }.
	Report from Kurt.Hornik@wu-wien.ac.at, 6 Jan 2006 14:38:38 +0100.
	[test idxback-exts]

2005-12-26  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (node, Node Names): pxref Node Line Requirements,
	about restrictions on characters in node names.

2005-12-25  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\pdfurl): make @/ a no-op.
	Report from Kurt Hornik, 23 Dec 2005 13:17:56 +0100.

	* util/texi2dvi (no_file_line_error): new control,
	with option --no-line-error to set it.  Wybo Dekker's mk program
	wants to parse TeX's original error messages.
	(run_tex): obey it.

2005-12-22  Akim Demaille  <akim@epita.fr>

	Implement --mostly-clean, improve the detection of aux files.
	* util/texi2dvi ($action): New.
	(--mostly-clean): New.
	(cd_orig): New.
	(generated_files_get, aux_file_p, index_file_p, xref_files_p):
	New.
	(get_index_files): Remove, replaced by the previous functions.
	(get_xref_files): Rename as...
	(xref_files_get): this.
	(run_index): Use generated_files_get.
	(clean): Rename as...
	(mostly_clean): this.
	Strengthen.